# bwsh-shell

./: CMakeLists.txt  README.md  arrow_keys.c  compile_commands.json  create_process.c  history.c  history.h  linkedList.c  linkedList.h  linked_list.c  main.c  ncurses_terminal.c  shellLoop.c  shellLoop.h  shell_functions.h  sqlite_add_record.c  sqlite_check_command.c  sqlite_delete_record.c  termios_functions.c  tokenize_line.c
.cache/clangd/index/: arrow_keys.c.E2B716399FB4DBA7.idx  create_process.c.7E12B8E430318BC6.idx  history.c.5C484898A1AB093F.idx  linkedList.c.B96971287F1E031F.idx  linkedList.h.B72BDC25F31F0A82.idx  linked_list.c.8A069FB683D6952F.idx  main.c.51877E1B7E698C47.idx  ncurses_terminal.c.ABA22235CF1B3A5D.idx  shellLoop.c.73638F4431050A36.idx  shell_functions.h.89FD6DCE2FA99115.idx  sqlite_add_record.c.8A1274ED7F86C0CC.idx  sqlite_check_command.c.E58BCC8F9C253324.idx  sqlite_delete_record.c.3C13F14EBC34D7AF.idx  termios_functions.c.0F4B82DAE5029659.idx  tokenize_line.c.ACF64D1989860677.idx
